--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li class="bar_li">Contact</li>
                     </ul>
                 </div>
-                <img id="header-img" src="Alex-Kunchevsky.gif">
+                <img id="header-img" src="image/Alex-Kunchevsky.gif">
 
 
             </div>
@@ -71,65 +71,65 @@
                     <h2 class="Skill_Title">Launage</h2>
                     <span class="Skill_Content">
                         <div class="SKill_box">
-                            <div class="Skill_image_container" style="background-image: url(c.jpg);">
+                            <div class="Skill_image_container" style="background-image: url(image/c.jpg);">
                                 <div class="Skill_label">Basic</div>
                             </div>
-                            <div class="Skill_image_container" style="background-image: url(java.png);">
+                            <div class="Skill_image_container" style="background-image: url(image/java.png);">
                                 <div class="Skill_label">Intermediate</div>
                             </div>
                         </div>
                     </span>
                     <h2 class="Skill_Title">Web Skils</h2>
                     <span class="Skill_Content">
-                        <div class="Skill_image_container" style="background-image: url(html.png);">
+                        <div class="Skill_image_container" style="background-image: url(image/html.png);">
                             <div class="Skill_label">Intermediate</div>
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(css.png);">
+                        <div class="Skill_image_container" style="background-image: url(image/css.png);">
                             <div class="Skill_label">Intermediate</div>
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(javascript.png);">
+                        <div class="Skill_image_container" style="background-image: url(image/javascript.png);">
                             <div class="Skill_label">Intermediate</div>
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(JQuery.png);">
+                        <div class="Skill_image_container" style="background-image: url(image/JQuery.png);">
                             <div class="Skill_label">Intermediate</div>
                         </div>
                     </span>
                     <h2 class="Skill_Title">FrameWork</h2>
                     <span class="Skill_Content">
-                        <div class="Skill_image_container" style="background-image: url(spring.png);">
+                        <div class="Skill_image_container" style="background-image: url(image/spring.png);">
                             <div class="Skill_label">Intermediate</div>
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(mybatis.jpg);">
+                        <div class="Skill_image_container" style="background-image: url(image/mybatis.jpg);">
                             <div class="Skill_label">Intermediate</div>
                         </div>
                     </span>
                     <h2 class="Skill_Title">DataBase</h2>
                     <span class="Skill_Content">
-                        <div class="Skill_image_container" style="background-image: url(oracle.png);">
+                        <div class="Skill_image_container" style="background-image: url(image/oracle.png);">
                             <div class="Skill_label">Intermediate</div>
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(mssql.jfif);">
+                        <div class="Skill_image_container" style="background-image: url(image/mssql.jfif);">
                             <div class="Skill_label">Basic</div>
                         </div>
                     </span>
                     <h2 class="Skill_Title">Operating System</h2>
                     <span class="Skill_Content">
-                        <div class="Skill_image_container" style="background-image: url(windows.png);">
+                        <div class="Skill_image_container" style="background-image: url(image/windows.png);">
                             <!-- <div class="Skill_label">Expert</div> -->
                         </div>
                     </span>
                     <h2 class="Skill_Title">Tools</h2>
                     <span class="Skill_Content">
-                        <div class="Skill_image_container" style="background-image: url(vscode.png);">
+                        <div class="Skill_image_container" style="background-image: url(image/vscode.png);">
                             <!-- <div class="Skill_label">Intermediate</div> -->
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(eclipse.jpg);">
+                        <div class="Skill_image_container" style="background-image: url(image/eclipse.jpg);">
                             <!-- <div class="Skill_label">Intermediate</div> -->
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(oraclemg.png);">
+                        <div class="Skill_image_container" style="background-image: url(image/oraclemg.png);">
                             <!-- <div class="Skill_label">Intermediate</div> -->
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(git.png);">
+                        <div class="Skill_image_container" style="background-image: url(image/git.png);">
                             <!-- <div class="Skill_label">Basic</div> -->
                         </div>
                     </span>
