--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <script src="js/jquery-3.4.1.slim"></script>
+    <script src="js/jquery-3.4.1.slim.js"></script>
     <title>포트폴리오</title>
 </head>
 
