--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>포트폴리오</title>
 </head>
 
-<body>
+<body> 
     <div id="root">
         <div class="HomepageLayout">
             <div class="header-class">
@@ -143,13 +143,16 @@
                 <div class="Container">
                     <div class="Row">
                         <div class="Box">
+                            <div class="Box_image" style="background-image: url(image/BangPool.png); width: 300px;">
+                                
+                            </div>
+
                             <div class="Box_info">
                                 <h1 class="Box_title">BangPool</h1>
                                 <p>개발기간 : 2019.10.28~ 2019.11.25</p>
                                 <p>사이트 목적 : 사회 초년생 및 대학교 신입생들이 방을 구하는 커뮤니티 사이트</p>
                                 <p>공지사항 게시판 , 나눔 게시판</p>
                                 <p>사용 기술 : Java,Spring, Oracle, JQuery, Ajax, Mybatis, Spring</p>
-
                             </div>
                         </div>
                     </div>
