--- a/index.html
+++ b/index.html
@@ -115,22 +115,17 @@
                     <h2 class="Skill_Title">Operating System</h2>
                     <span class="Skill_Content">
                         <div class="Skill_image_container" style="background-image: url(image/windows.png);">
-                            <!-- <div class="Skill_label">Expert</div> -->
                         </div>
                     </span>
                     <h2 class="Skill_Title">Tools</h2>
                     <span class="Skill_Content">
                         <div class="Skill_image_container" style="background-image: url(image/vscode.png);">
-                            <!-- <div class="Skill_label">Intermediate</div> -->
                         </div>
                         <div class="Skill_image_container" style="background-image: url(image/eclipse.jpg);">
-                            <!-- <div class="Skill_label">Intermediate</div> -->
                         </div>
                         <div class="Skill_image_container" style="background-image: url(image/oraclemg.png);">
-                            <!-- <div class="Skill_label">Intermediate</div> -->
                         </div>
                         <div class="Skill_image_container" style="background-image: url(image/git.png);">
-                            <!-- <div class="Skill_label">Basic</div> -->
                         </div>
                     </span>
                 </div>
@@ -143,16 +138,24 @@
                 <div class="Container">
                     <div class="Row">
                         <div class="Box">
-                            <div class="Box_image" style="background-image: url(image/BangPool.png); width: 300px;">
-                                
-                            </div>
-
+                            <div class="Box_image" style="background-image: url(image/BangPool.png); width: 300px;"></div>
                             <div class="Box_info">
                                 <h1 class="Box_title">BangPool</h1>
                                 <p>개발기간 : 2019.10.28~ 2019.11.25</p>
                                 <p>사이트 목적 : 사회 초년생 및 대학교 신입생들이 방을 구하는 커뮤니티 사이트</p>
                                 <p>공지사항 게시판 , 나눔 게시판</p>
-                                <p>사용 기술 : Java,Spring, Oracle, JQuery, Ajax, Mybatis, Spring</p>
+                                <p>사용 기술 : Java, Oracle, JQuery, Ajax, Mybatis, Spring</p>
+                            </div>
+                        </div>
+
+                        <div class="Box" style="margin-top: 50px;">
+                            <div class="Box_image" style="background-image: url(image/tmc.png); width: 300px;"></div>
+                            <div class="Box_info">
+                                <h1 class="Box_title">TMC</h1>
+                                <p>개발기간 : 2019.9.08~ 2019.9.27</p>
+                                <p>사이트 목적 : 유기견 입양 및 분양을 위한 커뮤니티 사이트</p>
+                                <p>회원가입, 카카오톡 로그인, 회원정보변경,자랑하기 게시판</p>
+                                <p>사용 기술 : Java, Oracle, JQuery, Ajax</p>
                             </div>
                         </div>
                     </div>
