--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <li class="header-li">프로필</li>
                             <li class="header-li">기술스택</li>
                             <li class="header-li">프로젝트</li>
-                            <li class="header-li">Notion</li>
+                            <!-- <li class="header-li">Notion</li> -->
                             <li class="header-li">Contant</li>
                         </ul>
                     </div>
@@ -51,9 +51,6 @@
                 </div>
 
                 <div class="about_me_content">
-                    <div class="about_me_img">
-                        내 사진
-                    </div>
                     <section class="about_me_section">
                         <h1></h1>
                         <p>어릴때 부터 호기심이 많은 성격에 만들어 보았던 간단한 계산기 프로그램으로 무언가를 만드는 것의 재미를 느끼게 되었고 그때부터 개발자를 꿈꾸게 되었습니다. 그래서
