--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="Container">
                     <div class="Row">
                         <div class="Box">
-                            <div class="Box_image" style="background-image: url(image/BangPool.png); width: 300px;"></div>
+                            <div class="Box_image" style="background-image: url(image/BangPool.PNG); width: 300px;"></div>
                             <div class="Box_info">
                                 <h1 class="Box_title">BangPool</h1>
                                 <p>개발기간 : 2019.10.28~ 2019.11.25</p>
@@ -145,7 +145,7 @@
                         </div>
 
                         <div class="Box" style="margin-top: 50px;">
-                            <div class="Box_image" style="background-image: url(image/tmc.png); width: 300px;"></div>
+                            <div class="Box_image" style="background-image: url(image/tmc.PNG); width: 300px;"></div>
                             <div class="Box_info">
                                 <h1 class="Box_title">TMC</h1>
                                 <p>개발기간 : 2019.9.08~ 2019.9.27</p>
