--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                             <li class="header-li">프로필</li>
                             <li class="header-li">기술스택</li>
                             <li class="header-li">프로젝트</li>
-                            <li class="header-li">Notion</li>
                             <li class="header-li">Contant</li>
                         </ul>
                     </div>
@@ -33,11 +32,11 @@
                         <div class="bar3"></div>
                     </div>
                     <ul class="bar_menu">
-                        <li class="bar_li">Home</li>
-                        <li class="bar_li">About</li>
-                        <li class="bar_li">Skills</li>
-                        <li class="bar_li">Project</li>
-                        <li class="bar_li">Contact</li>
+                        <li class="bar_li">메인</li>
+                        <li class="bar_li">프로필</li>
+                        <li class="bar_li">기술스택</li>
+                        <li class="bar_li">프로젝트</li>
+                        <li class="bar_li">Contant</li>
                     </ul>
                 </div>
                 <img id="header-img" src="image/Alex-Kunchevsky.gif">
@@ -51,11 +50,7 @@
                 </div>
 
                 <div class="about_me_content">
-                    <div class="about_me_img">
-                        내 사진
-                    </div>
                     <section class="about_me_section">
-                        <h1></h1>
                         <p>어릴때 부터 호기심이 많은 성격에 만들어 보았던 간단한 계산기 프로그램으로 무언가를 만드는 것의 재미를 느끼게 되었고 그때부터 개발자를 꿈꾸게 되었습니다. 그래서
                             대학교도 컴퓨터공학과를 가게 되었고 자연스럽게 많은것을 개발하게 될 수 있었습니다. 그 중 Javascript가 가지고 있는 가능성과 다양성에 매력을 느끼게 되어 웹
                             어플리케이션 개발자가 되기 위해 많은 노력을 하고 있습니다.</p>
@@ -115,22 +110,17 @@
                     <h2 class="Skill_Title">Operating System</h2>
                     <span class="Skill_Content">
                         <div class="Skill_image_container" style="background-image: url(image/windows.png);">
-                            <!-- <div class="Skill_label">Expert</div> -->
                         </div>
                     </span>
                     <h2 class="Skill_Title">Tools</h2>
                     <span class="Skill_Content">
                         <div class="Skill_image_container" style="background-image: url(image/vscode.png);">
-                            <!-- <div class="Skill_label">Intermediate</div> -->
                         </div>
                         <div class="Skill_image_container" style="background-image: url(image/eclipse.jpg);">
-                            <!-- <div class="Skill_label">Intermediate</div> -->
                         </div>
                         <div class="Skill_image_container" style="background-image: url(image/oraclemg.png);">
-                            <!-- <div class="Skill_label">Intermediate</div> -->
                         </div>
                         <div class="Skill_image_container" style="background-image: url(image/git.png);">
-                            <!-- <div class="Skill_label">Basic</div> -->
                         </div>
                     </span>
                 </div>
@@ -143,16 +133,24 @@
                 <div class="Container">
                     <div class="Row">
                         <div class="Box">
-                            <div class="Box_image" style="background-image: url(image/BangPool.png); width: 300px;">
-                                
-                            </div>
-
+                            <div class="Box_image" style="background-image: url(image/BangPool.PNG); width: 300px;"></div>
                             <div class="Box_info">
                                 <h1 class="Box_title">BangPool</h1>
                                 <p>개발기간 : 2019.10.28~ 2019.11.25</p>
                                 <p>사이트 목적 : 사회 초년생 및 대학교 신입생들이 방을 구하는 커뮤니티 사이트</p>
                                 <p>공지사항 게시판 , 나눔 게시판</p>
-                                <p>사용 기술 : Java,Spring, Oracle, JQuery, Ajax, Mybatis, Spring</p>
+                                <p>사용 기술 : Java, Oracle, JQuery, Ajax, Mybatis, Spring</p>
+                            </div>
+                        </div>
+
+                        <div class="Box" style="margin-top: 50px;">
+                            <div class="Box_image" style="background-image: url(image/tmc.PNG); width: 300px;"></div>
+                            <div class="Box_info">
+                                <h1 class="Box_title">TMC</h1>
+                                <p>개발기간 : 2019.9.08~ 2019.9.27</p>
+                                <p>사이트 목적 : 유기견 입양 및 분양을 위한 커뮤니티 사이트</p>
+                                <p>회원가입, 카카오톡 로그인, 회원정보변경,자랑하기 게시판</p>
+                                <p>사용 기술 : Java, Oracle, JQuery, Ajax</p>
                             </div>
                         </div>
                     </div>
@@ -162,7 +160,7 @@
             <div class="Contact">
                 <h1 class="Contact_hedding">CONTACT!</h1>
                 <p class="Email"> Email : gilhongsuk@gmail.com </p>
-                <p class="Email"> Phone : 010-4089-9024 </p>
+                <p class="Email"> Phone : 010-4089-9024</p>
             </div>
 
         </div>
