--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 <h1 class="Box_title">BangPool</h1>
                                 <p>개발기간 : 2019.10.28~ 2019.11.25</p>
                                 <p>사이트 목적 : 사회 초년생 및 대학교 신입생들이 방을 구하는 커뮤니티 사이트</p>
-                                <p>공지사항 게시판 , 나눔 게시판</p>
+                                <p>만든 기능 : 공지사항 게시판 , 나눔 게시판</p>
                                 <p>사용 기술 : Java, Oracle, JQuery, Ajax, Mybatis, Spring</p>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                                 <h1 class="Box_title">TMC</h1>
                                 <p>개발기간 : 2019.9.08~ 2019.9.27</p>
                                 <p>사이트 목적 : 유기견 입양 및 분양을 위한 커뮤니티 사이트</p>
-                                <p>회원가입, 카카오톡 로그인, 회원정보변경,자랑하기 게시판</p>
+                                <p>만든 기능 : 회원가입, 카카오톡 로그인, 회원정보변경,자랑하기 게시판</p>
                                 <p>사용 기술 : Java, Oracle, JQuery, Ajax</p>
                             </div>
                         </div>
