--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body> 
     <div id="root">
-        <div class="HomepageLayout">
+        <div class="homepageLayout">
             <div class="header-class">
                 <div class="header-menu">
                     <div class="header-ul">
@@ -61,104 +61,188 @@
             </div>
 
             <div class="skill">
-                <h1 class="skill_head"> Skils </h1>
-                <div class="Skill_Content">
-                    <h2 class="Skill_Title">Launage</h2>
-                    <span class="Skill_Content">
+                <h1 class="skill_head"> Skills </h1>
+                <div class="skill_content">
+                    <h2 class="skill_title">Launage</h2>
+                    <span class="skill_content">
                         <div class="SKill_box">
-                            <div class="Skill_image_container" style="background-image: url(image/c.jpg);">
-                                <div class="Skill_label">Basic</div>
+                            <!-- <div class="skill_image_container" style="background-image: url(image/c.jpg);">
+                                <div class="skill_label">Basic</div>
+                            </div> -->
+                            <div class="skill_image_container" style="background-image: url(image/java.png);">
+                                <div class="skill_label">Intermediate</div>
                             </div>
-                            <div class="Skill_image_container" style="background-image: url(image/java.png);">
-                                <div class="Skill_label">Intermediate</div>
-                            </div>
                         </div>
                     </span>
-                    <h2 class="Skill_Title">Web Skils</h2>
-                    <span class="Skill_Content">
-                        <div class="Skill_image_container" style="background-image: url(image/html.png);">
-                            <div class="Skill_label">Intermediate</div>
+                    <h2 class="skill_title">Web Skills</h2>
+                    <span class="skill_content">
+                        <div class="skill_image_container" style="background-image: url(image/html.png);">
+                            <div class="skill_label">Intermediate</div>
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(image/css.png);">
-                            <div class="Skill_label">Intermediate</div>
+                        <div class="skill_image_container" style="background-image: url(image/css.png);">
+                            <div class="skill_label">Intermediate</div>
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(image/javascript.png);">
-                            <div class="Skill_label">Intermediate</div>
+                        <div class="skill_image_container" style="background-image: url(image/javascript.png);">
+                            <div class="skill_label">Intermediate</div>
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(image/JQuery.png);">
-                            <div class="Skill_label">Intermediate</div>
-                        </div>
-                    </span>
-                    <h2 class="Skill_Title">FrameWork</h2>
-                    <span class="Skill_Content">
-                        <div class="Skill_image_container" style="background-image: url(image/spring.png);">
-                            <div class="Skill_label">Intermediate</div>
-                        </div>
-                        <div class="Skill_image_container" style="background-image: url(image/mybatis.jpg);">
-                            <div class="Skill_label">Intermediate</div>
+                        <div class="skill_image_container" style="background-image: url(image/JQuery.png);">
+                            <div class="skill_label">Intermediate</div>
                         </div>
                     </span>
-                    <h2 class="Skill_Title">DataBase</h2>
-                    <span class="Skill_Content">
-                        <div class="Skill_image_container" style="background-image: url(image/oracle.png);">
-                            <div class="Skill_label">Intermediate</div>
+                    <h2 class="skill_title">FrameWork</h2>
+                    <span class="skill_content">
+                        <div class="skill_image_container" style="background-image: url(image/eGov.png);">
+                            <div class="skill_label">Intermediate</div>
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(image/mssql.jfif);">
-                            <div class="Skill_label">Basic</div>
-                        </div>
-                    </span>
-                    <h2 class="Skill_Title">Operating System</h2>
-                    <span class="Skill_Content">
-                        <div class="Skill_image_container" style="background-image: url(image/windows.png);">
+                        <!-- <div class="skill_image_container" style="background-image: url(image/spring.png);">
+                            <div class="skill_label">Intermediate</div>
+                        </div> -->
+                        <div class="skill_image_container" style="background-image: url(image/mybatis.jpg);">
+                            <div class="skill_label">Intermediate</div>
                         </div>
                     </span>
-                    <h2 class="Skill_Title">Tools</h2>
-                    <span class="Skill_Content">
-                        <div class="Skill_image_container" style="background-image: url(image/vscode.png);">
+                    <h2 class="skill_title">DataBase</h2>
+                    <span class="skill_content">
+                        <div class="skill_image_container" style="background-image: url(image/oracle.png);">
+                            <div class="skill_label">Intermediate</div>
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(image/eclipse.jpg);">
+                        <div class="skill_image_container" style="background-image: url(image/mssql.jfif);">
+                            <div class="skill_label">Intermediate</div>
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(image/oraclemg.png);">
+                        <div class="skill_image_container" style="background-image: url(image/Tibero.png);">
+                            <div class="skill_label">Intermediate</div>
                         </div>
-                        <div class="Skill_image_container" style="background-image: url(image/git.png);">
+                    </span>
+                    <h2 class="skill_title">Operating System</h2>
+                    <span class="skill_content">
+                        <div class="skill_image_container" style="background-image: url(image/windows.png);">
+                        </div>
+                        <div class="skill_image_container" style="background-image: url(image/Linux.jpg);">
+                        </div>
+                    </span>
+                    <h2 class="skill_title">Tools</h2>
+                    <span class="skill_content">
+                        <div class="skill_image_container" style="background-image: url(image/vscode.png);">
+                        </div>
+                        <div class="skill_image_container" style="background-image: url(image/eclipse.jpg);">
+                        </div>
+                        <div class="skill_image_container" style="background-image: url(image/oraclemg.png);">
+                        </div>
+                        <div class="skill_image_container" style="background-image: url(image/git.png);">
+                        </div>
+                        <div class="skill_image_container" style="background-image: url(image/gradle.png);">
                         </div>
                     </span>
                 </div>
             </div>
 
-            <div class="Project">
-                <header class="Project_title">
-                    <h1 class="Project_hedding">Project</h1>
+            <div class="project">
+                <header class="project_title">
+                    <h1 class="project_hedding">Toy Projects</h1>
                 </header>
                 <div class="Container">
-                    <div class="Row">
-                        <div class="Box">
-                            <div class="Box_image" style="background-image: url(image/BangPool.PNG); width: 300px;"></div>
-                            <div class="Box_info">
-                                <h1 class="Box_title">BangPool</h1>
-                                <p>개발기간 : 2019.10.28~ 2019.11.25</p>
-                                <p>사이트 목적 : 사회 초년생 및 대학교 신입생들이 방을 구하는 커뮤니티 사이트</p>
-                                <p>만든 기능 : 공지사항 게시판 , 나눔 게시판</p>
-                                <p>사용 기술 : Java, Oracle, JQuery, Ajax, Mybatis, Spring</p>
-                            </div>
+                    <div class="box">
+                        <div class="box_image" style="background-image: url(image/BangPool.PNG); width: 300px;"></div>
+                        <div class="box_info">
+                            <h1 class="box_title">BangPool</h1>
+                            <p>개발기간 : 2019.10.28~ 2019.11.25</p>
+                            <p>사이트 목적 : 사회 초년생 및 대학교 신입생들이 방을 구하는 커뮤니티 사이트</p>
+                            <p>만든 기능 : 공지사항 게시판 , 나눔 게시판</p>
+                            <p>사용 기술 : Java, Oracle, JQuery, Ajax, Mybatis, Spring</p>
                         </div>
+                    </div>
 
-                        <div class="Box" style="margin-top: 50px;">
-                            <div class="Box_image" style="background-image: url(image/tmc.PNG); width: 300px;"></div>
-                            <div class="Box_info">
-                                <h1 class="Box_title">TMC</h1>
-                                <p>개발기간 : 2019.9.08~ 2019.9.27</p>
-                                <p>사이트 목적 : 유기견 입양 및 분양을 위한 커뮤니티 사이트</p>
-                                <p>만든 기능 : 회원가입, 카카오톡 로그인, 회원정보변경,자랑하기 게시판</p>
-                                <p>사용 기술 : Java, Oracle, JQuery, Ajax</p>
-                            </div>
+                    <div class="box" style="margin-top: 50px;">
+                        <div class="box_image" style="background-image: url(image/tmc.PNG); width: 300px;"></div>
+                        <div class="box_info">
+                            <h1 class="box_title">TMC</h1>
+                            <p>개발기간 : 2019.9.08~ 2019.9.27</p>
+                            <p>사이트 목적 : 유기견 입양 및 분양을 위한 커뮤니티 사이트</p>
+                            <p>만든 기능 : 회원가입, 카카오톡 로그인, 회원정보변경,자랑하기 게시판</p>
+                            <p>사용 기술 : Java, Oracle, JQuery, Ajax</p>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="Contact">
-                <h1 class="Contact_hedding">CONTACT!</h1>
+            <div class="project_raontec">
+                <header class="project_title">
+                    <h1 class="project_hedding">CAREER</h1>
+                </header>
+                <div class="container">
+                    <div class="box">
+                        <div class="box_info">
+                            <span class="company_title">(주) Beauty Plus(USA)</span>    
+                            <p>2016.10 ~ 2018.10</p>
+                            <p>Beauty Plus는 미국 동부 뉴저지에 위치한 가발 도매업체 입니다.<br>
+                               IT Support 팀으로 인턴으로 입사해 사내 홈페이지 및 Web ERP 시스템 유지보수 및 개발을 했고,
+                               인턴 1년과 정규직 1년 후 H1B 취업비자를 신청했지만 비자 추첨이 안되어 한국으로 돌아왔습니다.
+                            </p>
+                            <hr>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="box_info">
+                            <span class="company_title">(주) Raontec</span>
+                            <p>2020.02 ~ 현재</p>
+                            <p>우리나라 지역별 교통정보센터에 ITS, BIS/BMS, 스마트교차로 소프트웨어를 개발하는 SI 업체입니다.
+                               기본적으로는 전자정부프레임워크 기반의 풀 스택 웹 개발을 하고 있으며,
+                               각 지자체들의 유지보수와 하자보수까지 함께 담당하고 있습니다.
+                            </p>
+                            <h3>참여 프로젝트</h3>
+                            <p>프로젝트 개발환경 : 전자정부프레임워크 3.6, Java 1.7, Mybatis, Oracle, Tibero</p>
+                            <span class="project_title">1. BIS 운영단말</span>
+                            <p>BIS 운영단말은 우리나라 각 지자체의 버스 상태 및 BIT(버스안내기)를 운영관리하는 프로그램입니다.</p>
+                            <p>저는 천안, 고양, 하남, 세종, 목포시 교통정보센터에 BIS(버스 운영 관리 시스템) 운영단말 웹 프로젝트 참여했습니다.</p>
+                            <p>설계단계에서 해당 지자체에 직접 방문하여 서버와 디비의 스펙 상태를 확인 후 개발, 설치, 감리까지 받았습니다.</p>
+                            <p>네이버, 카카오 지도 API와 Toast Grid를 이용해 버스 운영에 필요 한 기본적인 정보를 등록, 수정, 표출 하고</p>
+                            <p>FTP 서버에 BIT(버스안내기)에 필요한 기반정보를 올려주었으며 BIT 장비 제어를 위해 프로토콜 문서 기준으로 TCP나 UDP 통신으로 장비 제어를 했습니다.</p>
+                            <p>배포환경 : Windows10, Linux</p>
+                            <br><br>
+                            <div class="box_image" style="background-image: url(image/login_main_page.gif); width: 553px; height: 300px;"></div>
+                            <div class="box_image" style="background-image: url(image/busstop_page.gif);    width: 553px; height: 300px;"></div>
+                            <br><br>
+                            <span class="project_title">2. ITS 운영단말</span>
+                            <p>ITS  운영단말은 우리나라 각 지자체의 교통상황을 운영관리하는 프로그램입니다.</p>
+                            <p>관리에는 VDS, DSRC, CCTV, VMS 등 도로에 설치되어있는 장비와 서버가 데이터를 주고 받아 그 데이터를 토대로 운영합니다.</p>
+                            <p>저는 인천, 고양, 파주 ITS 운영단말 웹 프로젝트에 참여했습니다.</p>
+                            <p>DSRC/RES, AVI, 통계페이지 다수 와 사용자 관리 페이지를 맡아 개발하였습니다.</p>
+                            <p>네이버, 카카오 지도 API와 Toast Grid를 이용해 데이터를 표출했고 High Chart를 이용해 통계 그래프를 표출했습니다.</p>
+                            <p>배포환경 : Windows Server 2008, Windows10, Linux</p>
+                            <br><br>
+                            <div class="box_image" style="background-image: url(image/its_01.gif); width: 553px; height: 300px;"></div>
+                            <div class="box_image" style="background-image: url(image/its_02.gif); width: 553px; height: 300px;"></div>
+                            <br><br>
+
+                            <span class="project_title">3. ITS 홈페이지</span>
+                            <p><a href="http://www.fitic.go.kr" target='_blank'>1) 인천 교통정보</a></p>
+                            <p><a href="https://its.goyang.go.kr" target='_blank'>2) 고양 교통정보</a></p>
+                            <p><a href="https://traffic.paju.go.kr" target='_blank'>3) 파주 교통정보</a></p>
+                            <p>ITS 홈페이지는 대시민을 각 지역 현재 교통상황과 CCTV 화면, VMS 정보 등 도로에 설치되어있는 장비의 정보를 표출합니다.</p>
+                            <p>직접 개발은 통계자료 표출 화면을 했으며, 각 지자체에 웹 서버(Apache)와 WAS 서버(Tomcat)를 설치하고 연동 후 SSL 등록을 주로 하였습니다.</p>
+                            <p>배포 환경 : Windows Server 2008, Linux</p>
+                            <div class="box_image" style="background-image: url(image/Inch_home.png); width: 370px; height: 220px;"></div>
+                            <div class="box_image" style="background-image: url(image/goyang_home.png); width: 370px; height: 220px;"></div>
+                            <div class="box_image" style="background-image: url(image/paju_home.png); width: 370px; height: 220px;"></div>
+                            <br><br>
+                            <span class="project_title">4. 날씨연계 API</span>
+                            <p>천안, 목포시 날씨 연계 API 서버 프로젝트에 참여했습니다.</p>
+                            <p>공공데이터포털에서 제공하는 기상청 OpenAPI를 이용해 DB에 정보를 업데이트하고 이력을 저장하는 서버를 개발했습니다.</p>
+                            <p>활용처로는 ITS 홈페이지 및 운영단말과 BIT(버스안내기)에 날씨 정보 표출로 사용되었습니다.</p>
+                            <p>개발 환경 : 전자정부프레임워크 3.6, Java 1.8, Gradle, JPA, Tibero</p>
+                            <p>배포환경 : Windows10</p>
+                            <br><br>
+                            <hr>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <br>
+
+            <div class="contact">
+                <h1 class="contact_hedding">CONTACT!</h1>
                 <p class="Email"> Email : gilhongsuk@gmail.com </p>
                 <p class="Email"> Phone : 010-4089-9024</p>
             </div>
