--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                         <p>어릴때 부터 호기심이 많은 성격에 만들어 보았던 간단한 계산기 프로그램으로 무언가를 만드는 것의 재미를 느끼게 되었고 그때부터 개발자를 꿈꾸게 되었습니다. 그래서
                             대학교도 컴퓨터공학과를 가게 되었고 자연스럽게 많은것을 개발하게 될 수 있었습니다. 그 중 Javascript가 가지고 있는 가능성과 다양성에 매력을 느끼게 되어 웹
                             어플리케이션 개발자가 되기 위해 많은 노력을 하고 있습니다.</p>
-                        <p> 저는 제 목표를 '잘하는' 개발자로 삼아서 더 공부하고 있습니다. 경력을 쌓은 개발자는 경력만 쌓이면 자연스럽게 되지만 '잘하는'개발자는 경력뿐만 아니라 매일
-                            공부하여 개발자로써 더 높은 곳을 바라보고 있기 때문입니다 . 저는 계속 공부하여 '잘하는'개발자로써 남고 싶습니다.</p>
+                        <p>저는 제 목표를 '잘하는' 개발자로 삼아서 더 공부하고 있습니다. 경력을 쌓은 개발자는 경력만 쌓이면 자연스럽게 되지만 '잘하는'개발자는 경력뿐만 아니라 매일
+                           공부하여 개발자로써 더 높은 곳을 바라보고 있기 때문입니다 . 저는 계속 공부하여 '잘하는' 개발자로써 남고 싶습니다.</p>
                     </section>
                 </div>
             </div>
@@ -172,12 +172,14 @@
                 <div class="container">
                     <div class="box">
                         <div class="box_info">
-                            <span class="company_title">(주) Beauty Plus(USA)</span>    
+                            <span class="company_title">(주) Beauty Plus(USA)</span>
                             <p>2016.10 ~ 2018.10</p>
                             <p>Beauty Plus는 미국 동부 뉴저지에 위치한 가발 도매업체 입니다.<br>
                                IT Support 팀으로 인턴으로 입사해 사내 홈페이지 및 Web ERP 시스템 유지보수 및 개발을 했고,
                                인턴 1년과 정규직 1년 후 H1B 취업비자를 신청했지만 비자 추첨이 안되어 한국으로 돌아왔습니다.
                             </p>
+                            <p>Java Spring으로 개발된 사내 웹 ERP 시스템의 유지보수를 했고, 사내 장비들의 재고와 관리를 했습니다.</p>
+                            <p>보고용 자료를 위해 VBA를 이용해 엑셀로 일, 주, 년 단위 각 주의 세일즈맨들 실적과 매장 주문 및 리턴 이력 프로그램을 개발했습니다.</p>
                             <hr>
                         </div>
                     </div>
