--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
                         <p>어릴때 부터 호기심이 많은 성격에 만들어 보았던 간단한 계산기 프로그램으로 무언가를 만드는 것의 재미를 느끼게 되었고 그때부터 개발자를 꿈꾸게 되었습니다. 그래서
                             대학교도 컴퓨터공학과를 가게 되었고 자연스럽게 많은것을 개발하게 될 수 있었습니다. 그 중 Javascript가 가지고 있는 가능성과 다양성에 매력을 느끼게 되어 웹
                             어플리케이션 개발자가 되기 위해 많은 노력을 하고 있습니다.</p>
-                        <p>저는 제 목표를 '잘하는' 개발자로 삼아서 더 공부하고 있습니다. 경력을 쌓은 개발자는 경력만 쌓이면 자연스럽게 되지만 '잘하는'개발자는 경력뿐만 아니라 매일
-                           공부하여 개발자로써 더 높은 곳을 바라보고 있기 때문입니다 . 저는 계속 공부하여 '잘하는' 개발자로써 남고 싶습니다.</p>
+                        <p>제 목표는 '잘하며' '함께' 하고싶은 개발자입니다. 잘하기만 하는것이 아니라 원만한 협업을 통하여 즐겁게 같이 일 할 수있는 개발자로 함께 하고 싶습니다.
+                           또한 빠르게 변화하는 세상에 맞게 많은 것에 도전해보고 함께하는 동료들과 같이 성장하고 싶습니다.
+                        </p>
                     </section>
                 </div>
             </div>
